--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 torch>=1.13.1
-transformers
+transformers>=4.33.2
 deepspeed
-datasets
+datasets>=2.14.5
 accelerate>=0.21.0
 peft>=0.4.0
 trl>=0.7.1
