--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 torch>=1.13.1
-transformers
+transformers==4.33.2
 deepspeed
-datasets
-accelerate>=0.21.0
-peft>=0.4.0
-trl>=0.7.1
+datasets==2.14.5
+accelerate==0.21.0
+peft==0.4.0
+trl==0.7.1
 scipy
 sentencepiece
 protobuf
@@ -24,3 +24,6 @@ tqdm
 kaleido
 cohere
 openai
+better_profanity
+scikit-learn
+wget
